[gd_scene load_steps=18 format=1]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Board/Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/stylebox/grey_round_bevel_disabled.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/stylebox/grey_round_bevel_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/stylebox/grey_round_bevel_normal.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/stylebox/grey_round_bevel_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/LiberationSerif-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Game/ActionSensor/ActionSensor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game/ActionController/ActionController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/InitManager/InitManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Game/MessageBox/MessageBox.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = 4.0
content_margin/right = 4.0
content_margin/top = 4.0
content_margin/bottom = 4.0
texture = ExtResource( 3 )
margin/left = 16.0
margin/right = 16.0
margin/top = 16.0
margin/bottom = 16.0
expand_margin/left = 2.0
expand_margin/right = 2.0
expand_margin/top = 2.0
expand_margin/bottom = 2.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = 4.0
content_margin/right = 4.0
content_margin/top = 4.0
content_margin/bottom = 4.0
texture = ExtResource( 4 )
margin/left = 16.0
margin/right = 16.0
margin/top = 16.0
margin/bottom = 16.0
expand_margin/left = 2.0
expand_margin/right = 2.0
expand_margin/top = 2.0
expand_margin/bottom = 2.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = 4.0
content_margin/right = 4.0
content_margin/top = 4.0
content_margin/bottom = 4.0
texture = ExtResource( 5 )
margin/left = 16.0
margin/right = 16.0
margin/top = 16.0
margin/bottom = 16.0
expand_margin/left = 2.0
expand_margin/right = 2.0
expand_margin/top = 2.0
expand_margin/bottom = 2.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = 4.0
content_margin/right = 4.0
content_margin/top = 4.0
content_margin/bottom = 4.0
texture = ExtResource( 6 )
margin/left = 16.0
margin/right = 16.0
margin/top = 16.0
margin/bottom = 16.0
expand_margin/left = 2.0
expand_margin/right = 2.0
expand_margin/top = 2.0
expand_margin/bottom = 2.0
draw_center = true

[sub_resource type="DynamicFont" id=5]

font/size = 14
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 7 )

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )
Button/styles/disabled = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Board" parent="." instance=ExtResource( 2 )]

[node name="GUI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="GUI"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 6 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="ActionSensor" parent="GUI/Control" instance=ExtResource( 8 )]

editor/display_folded = true
anchor/top = 1
margin/left = 21.0
margin/top = 148.0
margin/right = 11.0
margin/bottom = 3.0

[node name="ActionController" parent="GUI/Control" instance=ExtResource( 9 )]

anchor/left = 0
anchor/top = 1
anchor/right = 0
anchor/bottom = 1
margin/left = 14.0
margin/top = 307.0
margin/right = 782.0
margin/bottom = 146.0

[node name="InitManager" parent="GUI/Control" instance=ExtResource( 10 )]

margin/left = 18.0
margin/top = 18.0
margin/right = 215.0
margin/bottom = 296.0

[node name="MessageBox" parent="GUI/Control" instance=ExtResource( 11 )]

anchor/left = 1
anchor/right = 1
margin/left = 237.0
margin/right = 12.0

[connection signal="active_actor_set" from="." to="GUI/Control/ActionSensor" method="_on_Game_active_actor_set"]

[connection signal="announce_check" from="." to="GUI/Control/MessageBox" method="_on_Game_announce_check"]

[connection signal="announce_roll" from="." to="GUI/Control/MessageBox" method="_on_Game_announce_roll"]

[connection signal="action" from="GUI/Control/ActionSensor" to="GUI/Control/ActionController" method="_on_action"]


